--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             transition: 0.3s; font-family: 'Zen Old Mincho', serif;
         }
         .gate-btn:hover { background: var(--gold-accent); color: #fff; }
-        .error-msg { color: #d9534f; font-size: 0.7rem; margin-top: 10px; display: none; }
+        #gate-error { color: #d9534f; font-size: 0.7rem; margin-top: 10px; display: none; }
 
         /* --- 本編 --- */
         #main-content { display: none; }
@@ -83,7 +83,6 @@
             100% { transform: scaleY(0); transform-origin: bottom; }
         }
 
-        /* --- メニュー --- */
         .menu-section { padding: 60px 0 20px; }
         .menu-container {
             max-width: 800px; margin: 0 auto; display: flex; flex-direction: column; align-items: center; gap: 20px; padding: 0 30px;
@@ -96,7 +95,7 @@
         }
         .btn-minimal:hover { color: var(--gold-accent); border-bottom: 1px solid var(--gold-accent); }
 
-        /* --- RSVPセクション --- */
+        /* --- RSVPセクション (アニメーションなし) --- */
         .rsvp-section {
             background-color: var(--soft-gold);
             padding: 60px 30px;
@@ -135,7 +134,6 @@
             letter-spacing: 0.05em;
         }
 
-        /* --- 下部セクション (FAQ / NEWS) --- */
         .bottom-section { max-width: 600px; margin: 0 auto 100px; padding: 0 30px; text-align: center; }
         .section-sub-title { font-size: 0.75rem; letter-spacing: 0.2em; color: #888; margin-bottom: 20px; font-weight: 700; }
         
@@ -152,7 +150,6 @@
         .news-date { color: #aaa; flex-shrink: 0; }
         .news-content { color: #666; }
 
-        /* --- Hero演出 --- */
         .fade-in-active { opacity: 1; }
         .gold-separator { width: 0; height: 1px; background: linear-gradient(90deg, #c5a059, #e9d0a5, #c5a059); margin: 20px 0; transition: width 2s ease; transition-delay: 2.5s; }
         .gold-separator.show { width: 80px; }
@@ -185,7 +182,7 @@
             <div class="gate-sub-label">例：2026.01.01 → 20260101</div>
             <input type="tel" id="gate-pass" class="gate-input" placeholder="挙式日8桁を入力" maxlength="8">
             <button class="gate-btn" id="unlock-btn">UNLOCK</button>
-            <div id="gate-error" class="error-msg">passcodeが違います</div>
+            <div id="gate-error">passcodeが違います</div>
         </div>
     </div>
 
@@ -194,7 +191,7 @@
             <a href="venue.html">VENUE</a>
             <a href="program.html">PROGRAM</a>
             <a href="profile.html">PROFILE</a>
-            <a href="gallery.html">GALLERY</a>
+            <a href="https://script.google.com/macros/s/AKfycbwURwZ7jNvhN43lLo9UUVhsXghW6AHTJc4Bn9_gG-1jNvQ9jEDX6GWCX2AVPSIk-B55qg/exec" target="_blank">GALLERY</a>
             <a href="music.html">MUSIC</a>
             <a href="form.html">RSVP</a>
         </nav>
@@ -236,7 +233,7 @@
                 </div>
                 <div class="menu-row">
                     <a href="profile.html" class="btn-minimal">PROFILE</a>
-                    <a href="gallery.html" class="btn-minimal">GALLERY</a>
+                    <a href="https://script.google.com/macros/s/AKfycbwURwZ7jNvhN43lLo9UUVhsXghW6AHTJc4Bn9_gG-1jNvQ9jEDX6GWCX2AVPSIk-B55qg/exec" target="_blank" class="btn-minimal">GALLERY</a>
                     <a href="music.html" class="btn-minimal">MUSIC</a>
                 </div>
             </div>
