--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
             --text-color: #4a4a4a; 
             --gold-accent: #c5a059;
             --soft-gold: #f2ede4;
-            --disabled-color: #aaa;
         }
 
         /* --- ロック画面 --- */
@@ -53,8 +52,7 @@
         .fixed-nav { position: fixed; top: 0; width: 100%; height: 60px; background: rgba(248, 247, 245, 0.98); display: flex; justify-content: flex-end; align-items: center; padding-right: 5%; gap: 15px; z-index: 100; box-sizing: border-box; border-bottom: 1px solid rgba(0,0,0,0.03); }
         .fixed-nav a { text-decoration: none; color: var(--text-color); font-size: 0.65rem; letter-spacing: 0.1em; position: relative; padding: 5px 0; transition: 0.3s; }
         .fixed-nav a:hover { color: var(--gold-accent); }
-        /* ナビゲーションの無効化スタイル */
-        .fixed-nav a.disabled { color: var(--disabled-color); cursor: default; pointer-events: none; }
+        .fixed-nav a.disabled { opacity: 0.5; cursor: default; pointer-events: none; }
 
         .hero { display: flex; height: 100vh; width: 100%; position: relative; overflow: hidden; align-items: center; padding-top: 60px; box-sizing: border-box; }
         .hero-left { flex: 1; display: flex; flex-direction: column; justify-content: center; padding-left: 8%; z-index: 2; }
@@ -95,26 +93,12 @@
             flex: 0 1 200px; font-weight: 700; text-decoration: none; color: var(--text-color);
             border-bottom: 1px solid #d1d1d1; padding: 25px 0; font-size: 0.75rem;
             letter-spacing: 0.3em; text-align: center; transition: 0.3s;
-            position: relative;
+            display: flex; flex-direction: column; align-items: center; justify-content: center;
         }
         .btn-minimal:hover:not(.disabled) { color: var(--gold-accent); border-bottom: 1px solid var(--gold-accent); }
+        .btn-minimal.disabled { pointer-events: none; }
         
-        /* ボタンの無効化スタイル */
-        .btn-minimal.disabled {
-            color: var(--disabled-color);
-            border-bottom: 1px solid #e0e0e0;
-            opacity: 0.6;
-            cursor: default;
-            pointer-events: none;
-        }
-        .status-tag {
-            display: block;
-            font-size: 0.55rem;
-            letter-spacing: 0.05em;
-            font-weight: 400;
-            margin-top: 5px;
-            color: #999;
-        }
+        .status-tag { display: block; letter-spacing: 0.05em; font-weight: 400; margin-top: 5px; }
 
         .rsvp-section {
             background-color: var(--soft-gold);
@@ -254,14 +238,14 @@
                 <div class="menu-row">
                     <a href="profile.html" class="btn-minimal">PROFILE</a>
                     
-                    <div class="btn-minimal disabled">
-                        🔒 GALLERY
-                        <span class="status-tag">4月末公開予定</span>
+                    <div class="btn-minimal disabled" style="opacity: 0.5;">
+                        <span style="font-size: 0.8em; margin-right: 4px;">🔒</span>GALLERY
+                        <span class="status-tag" style="font-size: 0.5rem; color: #ccc;">4月末公開予定</span>
                     </div>
 
-                    <div class="btn-minimal disabled">
-                        🔒 MUSIC
-                        <span class="status-tag">当日公開予定</span>
+                    <div class="btn-minimal disabled" style="opacity: 0.5;">
+                        <span style="font-size: 0.8em; margin-right: 4px;">🔒</span>MUSIC
+                        <span class="status-tag" style="font-size: 0.5rem; color: #ccc;">当日公開予定</span>
                     </div>
                 </div>
             </div>
