--- a/venue.html
+++ b/venue.html
@@ -19,16 +19,13 @@
             color: var(--text-color); 
             font-family: 'Zen Old Mincho', serif; 
             line-height: 1.8; 
-            background-color: #000; /* 画像読み込み前のチラつき防止 */
-            /* 背景画像の設定（透過なしのそのまま表示） */
+            background-color: #000;
             background-image: url('venue_kawabun.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
             background-repeat: no-repeat;
         }
-
-        /* 透過レイヤー（body::before）を削除しました */
 
         .container { 
             max-width: 800px; 
@@ -49,8 +46,8 @@
             text-transform: uppercase; 
             margin: 0 0 15px 0;
             font-weight: 900; 
-            color: #fff; /* 背景が写真そのものになるため、白文字に変更して視認性を確保 */
-            text-shadow: 0 2px 10px rgba(0,0,0,0.5); /* 影をつけて文字を浮き立たせる */
+            color: #fff;
+            text-shadow: 0 2px 10px rgba(0,0,0,0.5);
         }
         .gold-line {
             width: 50px;
@@ -59,11 +56,11 @@
             display: block;
         }
 
-        /* 会場情報カードの視認性調整 */
+        /* 修正箇所：背景をさらに薄く（0.85 → 0.6）調整 */
         .venue-card {
-            background: rgba(255, 255, 255, 0.85); /* 写真の上で見やすいよう少し不透明度をアップ */
-            backdrop-filter: blur(10px); /* すりガラス効果でさらに読みやすく */
-            -webkit-backdrop-filter: blur(10px);
+            background: rgba(255, 255, 255, 0.6); 
+            backdrop-filter: blur(12px); 
+            -webkit-backdrop-filter: blur(12px);
             padding: 60px 40px;
             border-radius: 4px;
             box-shadow: 0 10px 40px rgba(0,0,0,0.2);
@@ -80,7 +77,7 @@
 
         .venue-address { 
             font-size: 0.9rem; 
-            color: var(--sub-text-color); 
+            color: var(--text-color); /* 視認性のため少し濃くしました */
             margin-bottom: 40px; 
             display: block; 
             letter-spacing: 0.05em;
@@ -94,12 +91,14 @@
             overflow: hidden;
             border-radius: 2px;
             box-shadow: 0 2px 15px rgba(0,0,0,0.1);
+            background: #f0f0f0;
         }
         
+        /* 修正箇所：Googleマップの埋め込み設定 */
         .map-frame { 
             width: 100%; 
             height: 100%; 
-            border: none; 
+            border: 0; 
             filter: grayscale(1) contrast(0.9); 
         }
 
@@ -108,7 +107,7 @@
             max-width: 500px; 
             margin: 0 auto; 
             font-size: 0.85rem; 
-            color: var(--sub-text-color); 
+            color: var(--text-color); 
             border-left: 2px solid var(--accent-color);
             padding-left: 20px;
         }
@@ -117,7 +116,7 @@
             display: inline-block; 
             margin-top: 80px; 
             text-decoration: none; 
-            color: #fff; /* 背景が写真のため白文字に */
+            color: #fff; 
             border-bottom: 1px solid #fff; 
             padding-bottom: 5px; 
             font-size: 0.8rem; 
@@ -147,9 +146,13 @@
             <span class="venue-address">愛知県名古屋市中区丸の内2-12-30</span>
             
             <div class="map-wrapper">
-                <iframe class="map-frame" 
-                    src="http://googleusercontent.com/maps.google.com/3" 
-                    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe 
+                    class="map-frame"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.4328575031444!2d136.89975767635677!3d35.17075675849487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6003712b3252570d%3A0xc023c74900a6e026!2zVEhFIEtBV0FCVU4gTkFHT1lB!5e0!3m2!1sja!2sjp!4v1707120000000!5m2!1sja!2sjp" 
+                    allowfullscreen="" 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
             </div>
 
             <div class="access-info">
