--- a/index.html
+++ b/index.html
@@ -38,17 +38,16 @@
         .fixed-nav a { text-decoration: none; color: var(--text-color); font-size: 0.7rem; letter-spacing: 0.05em; transition: 0.3s; white-space: nowrap; }
         .fixed-nav a.disabled { color: var(--charcoal-gray); opacity: 0.7; pointer-events: none; }
 
-        /* --- ヒーローエリア（右寄せ・1/3幅） --- */
+        /* --- ヒーローエリア --- */
         .hero { display: flex; height: 100vh; width: 100%; position: relative; overflow: hidden; align-items: stretch; padding-top: 60px; box-sizing: border-box; }
         .hero-left { flex: 1; display: flex; flex-direction: column; justify-content: center; padding-left: 8%; z-index: 2; background: var(--main-bg); }
         
         .hero-right { 
-            flex: 0.5; /* 全体の約1/3の幅に設定 */
+            flex: 0.67; /* 修正：幅を2/5 (約40%) に設定 */
             background: url('web用.JPG') no-repeat; 
-            /* 背景をアップにし、空と裾が入る位置に固定 */
             background-size: 160%; 
-            background-position: center 15%; 
-            /* 左上に角丸を設定 */
+            /* 修正：空をさらに詰め（5%）、下側をより映るように調整 */
+            background-position: center 5%; 
             border-radius: 150px 0 0 0; 
             position: relative; 
             z-index: 1;
@@ -74,11 +73,12 @@
         .info-box.show { opacity: 1; transform: translateY(0); }
         .info-date, .info-venue, .info-time { display: block; font-size: 0.8rem; letter-spacing: 0.2em; color: #666; line-height: 2; }
 
-        /* --- セクション共通 --- */
+        /* --- メッセージ --- */
         .message-section { padding: 120px 30px; text-align: center; opacity: 0; transform: translateY(30px); transition: 1.5s ease; }
         .message-section.is-visible { opacity: 1; transform: translateY(0); }
         .message-text { max-width: 600px; margin: 0 auto; line-height: 2.8; letter-spacing: 0.1em; font-size: 1rem; }
 
+        /* --- メニュー --- */
         .menu-section { padding: 60px 0 20px; }
         .menu-container { max-width: 800px; margin: 0 auto; padding: 0 30px; }
         .menu-row { display: flex; justify-content: center; gap: 30px; margin-bottom: 10px; }
@@ -87,9 +87,11 @@
         .btn-minimal.disabled { color: var(--charcoal-gray); opacity: 0.6; pointer-events: none; }
         .status-tag { display: block; letter-spacing: 0.05em; font-weight: 400; margin-top: 5px; color: #888; font-size: 0.6rem; }
 
+        /* --- RSVP --- */
         .rsvp-section { background-color: var(--soft-gold); padding: 80px 30px; margin: 60px 0 80px; text-align: center; }
         .btn-rsvp { width: 260px; background: #fff; border: 1px solid var(--gold-accent); color: var(--gold-accent); padding: 18px 0; text-decoration: none; font-weight: 700; font-size: 0.85rem; letter-spacing: 0.3em; display: inline-block; transition: 0.3s; }
 
+        /* --- ボトム --- */
         .bottom-section { max-width: 600px; margin: 0 auto 100px; padding: 0 30px; text-align: center; }
         .section-label { font-size: 0.8rem; letter-spacing: 0.2em; color: #888; margin-bottom: 25px; font-weight: 700; text-align: center; }
         
@@ -102,7 +104,7 @@
         .faq-link { text-decoration: none; color: var(--text-color); border-bottom: 1px solid #d1d1d1; font-size: 0.85rem; padding-bottom: 3px; transition: 0.3s; display: inline-block; }
         .faq-note { font-size: 0.65rem; color: #aaa; margin-top: 15px; letter-spacing: 0.05em; line-height: 1.6; max-width: 300px; }
 
-        /* --- モバイル最適化 --- */
+        /* --- モバイル --- */
         @media (max-width: 768px) {
             .hero { flex-direction: column; height: auto; }
             .hero-left { padding: 80px 30px 40px; flex: none; width: 100%; box-sizing: border-box; }
@@ -112,7 +114,7 @@
                 flex: none; 
                 border-radius: 80px 0 0 0; 
                 background-size: cover; 
-                background-position: center 10%; 
+                background-position: center 5%; 
             }
             .invitation-text { font-size: 2.0rem; }
             .scroll-down { right: 20px; bottom: 40px; }
