--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             flex: 0.67; /* 画面幅の約40%（2/5） */
             background: url('web用.JPG') no-repeat; 
             background-size: cover; 
-            /* 修正：下端（bottom）を基準にしてドレスの裾をしっかり映す */
-            background-position: center bottom; 
+            /* 修正：上側の空をより映し、下側をカットするために位置を調整 */
+            background-position: center 20%; 
             /* 左上に角丸を設定 */
             border-radius: 150px 0 0 0; 
             position: relative; 
@@ -111,7 +111,7 @@
                 width: 100%; 
                 flex: none; 
                 border-radius: 80px 0 0 0; 
-                background-position: center bottom; 
+                background-position: center 20%; 
             }
             .invitation-text { font-size: 2.0rem; }
             .scroll-down { right: 20px; bottom: 40px; }
@@ -230,7 +230,6 @@
 
         window.onload = () => {
             const lastLogin = localStorage.getItem('wedding_auth_time');
-            // 30分でタイムアウト
             if (lastLogin && (new Date().getTime() - lastLogin < 30 * 60 * 1000)) {
                 gate.style.display = 'none'; main.style.display = 'block'; startAnimation();
             }
